Fixes some issues with the accordion not collapsing and converts the alignment into a clustal format for use with MSAViewer.js.

--- a/CarbaResist-Web/src/main/resources/static/css/carbaresist.css
+++ b/CarbaResist-Web/src/main/resources/static/css/carbaresist.css
@@ -11,3 +11,7 @@ and open the template in the editor.
 #main-container {
     padding-top: 40px;
 }
+
+.accordion-toggle {
+    cursor: pointer;
+}
